@@ -43,7 +43,7 @@ namespace Marvel {
         Separator, Checkbox, Listbox, Text, LabelText, Combo, 
         Plot, SimplePlot, Indent, Unindent, Drawing, Window,
         Popup, Selectable, TreeNode, ProgressBar, Table, Dummy,
-        ImageButton, TimePicker, DatePicker
+        ImageButton, TimePicker, DatePicker, ColorButton
     };
 
     //-----------------------------------------------------------------------------
